--- a/common/package.json
+++ b/common/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "blog-aryan/common",
+  "name": "@blog-tisha/common",
   "version": "1.0.0",
   "main": "dist/index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
